samples/_failures_safe/1761374068_2722df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2125c46f.c: In function ‘main’:
./samples/SAFE/__tmp_2125c46f.c:161:1: error: expected declaration or statement at end of input
  161 | int main(void) {
      | ^~~
